# microbit-v2-rust-template

./: Cargo.toml  README.md
src/: main.rs  serial_setup.rs
