[package]
name = "microbitv2_rust_template"
version = "0.1.0"
authors = ["Lagunas Luca <lagunasluca@protonmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
rtt-target = { version =  "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version =  "0.1.2", features = ["cortex-m"] }
